# midip

./: .gitignore  .superpowers-dist-report.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
assets/devices/: catalog.json
assets/patterns/: catalog.json  patterns-s1.json
assets/patterns/v2/: bass-2step-2-step-sub.json  bass-afro-house-rolling-pentatonic.json  bass-afro-house-three-bar-roll.json  bass-amapiano-log-drum-double.json  bass-amapiano-log-drum.json  bass-baile-funk-gliding-808.json  bass-boom-bap-fifth-walk.json  bass-boom-bap-root-pulse.json  bass-boom-bap-walking-roots.json  bass-dancehall-dembow-bass.json  bass-disco-octave-bass.json  bass-disco-walk-up.json  (+196 more)
cheatsheet/: gen_cheatsheet.py
gui/: ARCHITECTURE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: App.svelte  app.css
gui/src-tauri/: Cargo.toml  gen-icon-source.mjs  gen-icons.mjs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: command.rs  dto.rs  lib.rs  main.rs
src/: app.rs  commands.rs  config.rs  input.rs  lib.rs  main.rs  persist.rs
src/devices/: profiles.rs
src/engine/: clock.rs  clock_in.rs  mod.rs  scheduler.rs  transport.rs
src/link/: mod.rs
src/midi/: message.rs  mod.rs  ports.rs
src/music/: chord_name.rs  mod.rs  scale.rs
src/pattern/: chain.rs  euclid.rs  format_v2.rs  generate.rs  index.rs  library.rs  mod.rs  model.rs  refs.rs  store.rs  timing.rs  trig.rs
src/ui/: chain_view.rs  clock_in_selector.rs  command_palette.rs  crate_view.rs  device_picker.rs  editor_drums.rs  editor_melodic.rs  generative_view.rs  help.rs  lanes.rs  library.rs  mgmt.rs  mod.rs  onboarding.rs  recovery.rs  route_editor.rs  scene_view.rs  tab_strip.rs  theme.rs  transport.rs
tests/: chords_and_roles.rs  cross_feature.rs  engine_playback.rs  library_lint.rs  library_query.rs  meter.rs  pack_phase6.rs  pattern_v2.rs  quality_gates.rs  timing_lint.rs
tools/packgen/: engine.py  helpers.py  packs_16.py  packs_23.py  packs_45.py  packs_chords.py  packs_complete.py  packs_meter.py  packs_timing.py  run.py
(+24 files in other folders)
