[package]
name = "midip"
version = "0.13.0"
edition = "2021"
description = "Terminal MIDI pattern sequencer for Roland AIRA Compact T-8 and S-1"
license = "AGPL-3.0-or-later"

[lib]
name = "midip"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
midir = "0.10"
rusty_link = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
crossbeam-channel = "0.5"
anyhow = "1"
