[package]
name = "midip"
version = "1.9.1"
edition = "2021"
description = "Terminal MIDI sequencer & live groovebox with a device library — AIRA Compact T-8/S-1 and any class-compliant USB-MIDI gear"
license = "AGPL-3.0-or-later"
repository = "https://github.com/gdamdam/midip"
homepage = "https://github.com/gdamdam/midip"
readme = "README.md"

[lib]
name = "midip"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
midir = "0.10"
rusty_link = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
crossbeam-channel = "0.5"
anyhow = "1"
